--- a/src/main/webapp/assets/css/member/member-find.css
+++ b/src/main/webapp/assets/css/member/member-find.css
@@ -8,7 +8,7 @@
 
 .logo-box {
   display: flex;
-  align-items: center; /* 수직 정렬 */
+  align-items: center; 
   justify-content: center;
   width: 464px;
   padding-bottom: 40px;
@@ -25,22 +25,22 @@
 
 input[type='radio'] {
   flex-shrink:0;
-  -webkit-appearance: none; /* 웹킷 브라우저에서 기본 스타일 제거*/
-  -moz-appearance: none; /* 모질라 브라우저에서 기본 스타일 제거*/ 
-  appearance: none; /*기본 브라우저에서 기본 스타일 제거*/
+  -webkit-appearance: none; 
+  -moz-appearance: none;
+  appearance: none; 
   width: 20px;
   height: 20px;
-  border: 1px solid #D9D9D9; /*체크되지 않았을 때의 테두리 색상*/
+  border: 1px solid #D9D9D9; 
   border-radius: 50%;
-  outline: none; /*focus 시에 나타나는 기본 스타일 제거*/
+  outline: none; 
   cursor: pointer;
   margin: 0;
 }
 /* 체크 시 버튼 모양 스타일*/
 input[type='radio']:checked {
-  background-color: #113F8A; /*체크 시 내부 원 색상*/
-  border: 3px solid #fff; /*라인이 아닌, 라인과 원 사이 색상*/
-  box-shadow: 0 0 0 1px #113F8A; /*라인*/
+  background-color: #113F8A; 
+  border: 3px solid #fff; 
+  box-shadow: 0 0 0 1px #113F8A; 
 }
 
 label {
