--- a/src/main/webapp/assets/css/member/member-login.css
+++ b/src/main/webapp/assets/css/member/member-login.css
@@ -10,7 +10,7 @@
 
 .logo-box {
   display: flex;
-  align-items: center; /* 수직 정렬 */
+  align-items: center; 
   justify-content: center;
   width: 464px;
   padding-bottom: 40px;
@@ -57,8 +57,8 @@
   flex-direction: row;
 }
 .active {
-    background-color: gray; /* 활성화된 버튼의 배경색 */
-    color: white;           /* 텍스트 색상 */
+    background-color: gray; 
+    color: white;           
 }
 
 /* 구매자/판매자 박스 */
@@ -80,8 +80,8 @@
 }
 
 .inputbutton1:focus {
-  border: 0.5px solid transparent; /* 기존 테두리는 투명하게 */
-  outline: 2px solid #828282; /* 포커스 시 outline 추가 */
+  border: 0.5px solid transparent; 
+  outline: 2px solid #828282;
 }
 
 .inputbutton {
@@ -98,8 +98,8 @@
 }
 
 .inputbutton:focus {
-  border: 0.5px solid transparent; /* 기존 테두리는 투명하게 */
-  outline: 2px solid #828282; /* 포커스 시 outline 추가 */
+  border: 0.5px solid transparent; 
+  outline: 2px solid #828282;
 }
 
 
@@ -138,9 +138,9 @@
 
 .box3 {
   display: flex;
-  justify-content: space-between; /* 왼쪽과 오른쪽 요소 간의 공간을 균등하게 배분 */
-  align-items: center; /* 수직 정렬 */
-  width: 427px; /* 부모 요소의 너비 설정 */
+  justify-content: space-between;
+  align-items: center; 
+  width: 427px; 
 }
 
 .savebox {
@@ -151,7 +151,7 @@
 .id-save {
   font-size: 14px;
   color: #131313;
-  margin: 0; /* 여백 제거 */
+  margin: 0; 
 }
 
 .forgot {
@@ -163,7 +163,7 @@
 
 .box4{
   display: flex;
-  align-items: center; /* 수직 정렬 */
+  align-items: center; 
   justify-content: center;
   width: 464px;
   padding-top: 20px;
@@ -171,7 +171,7 @@
 
 /* 구매자 자동 로그인 체크 박스 */
 #saveEmail {
-  display: none; /* 기본 체크박스 숨김 */
+  display: none; 
 }
 
 
@@ -181,33 +181,33 @@
   width: 20px; 
   border-radius: 50%;
   margin-right: 10px; 
-  position: relative; /* 자식 요소의 위치를 상대적으로 설정 */
-  background-color: #D9D9D9; /* 기본 배경색 */
+  position: relative; 
+  background-color: #D9D9D9; 
   box-sizing: border-box;
-  transition: background-color 0.3s; /* 색상 전환 효과 */
+  transition: background-color 0.3s; 
   cursor: pointer;
 }
 
 #saveEmail:checked + .checkmark{
-  background-color: #828282; /* 체크된 상태의 배경 색상 */
+  background-color: #828282; 
 }
 
 #saveEmail:checked + .checkmark::after {
   content: '';
   position: absolute;
-  width: 10px; /* 체크 표시 크기 */
-  height: 10px; /* 체크 표시 크기 */
-  background-color: white; /* 체크 표시 색상 */
-  border-radius: 50%; /* 동그라미 형태 */
-  top: 5px; /* 위치 조정 */
-  left: 5px; /* 위치 조정 */
-  display: block; /* 표시 활성화 */
+  width: 10px; 
+  height: 10px; 
+  background-color: white; 
+  border-radius: 50%; 
+  top: 5px; 
+  left: 5px;
+  display: block; 
 }
 
 
 /* 판매자 자동 로그인 체크 박스 */
 #saveEmail2 {
-  display: none; /* 기본 체크박스 숨김 */
+  display: none; 
 }
 
 .checkmark2 {
@@ -216,27 +216,27 @@
   width: 20px; 
   border-radius: 50%;
   margin-right: 10px; 
-  position: relative; /* 자식 요소의 위치를 상대적으로 설정 */
-  background-color: #D9D9D9; /* 기본 배경색 */
+  position: relative; 
+  background-color: #D9D9D9; 
   box-sizing: border-box;
-  transition: background-color 0.3s; /* 색상 전환 효과 */
+  transition: background-color 0.3s; 
   cursor: pointer;
 }
 
 #saveEmail2:checked + .checkmark2{
-  background-color: #828282; /* 체크된 상태의 배경 색상 */
+  background-color: #828282; 
 }
 
 #saveEmail2:checked + .checkmark2::after {
   content: '';
   position: absolute;
-  width: 10px; /* 체크 표시 크기 */
-  height: 10px; /* 체크 표시 크기 */
-  background-color: white; /* 체크 표시 색상 */
-  border-radius: 50%; /* 동그라미 형태 */
-  top: 5px; /* 위치 조정 */
-  left: 5px; /* 위치 조정 */
-  display: block; /* 표시 활성화 */
+  width: 10px; 
+  height: 10px;
+  background-color: white; 
+  border-radius: 50%; 
+  top: 5px; 
+  left: 5px;
+  display: block; 
 }
 
 .text{
@@ -253,7 +253,7 @@
 .text-box{
   display: flex;
   flex-direction: row;
-  align-items: center; /* 수직 정렬 */
+  align-items: center; 
   justify-content: center;
   width: 464px;
   padding-top: 50px;
