--- a/src/main/webapp/assets/css/member/member-seller-id-find-complete.css
+++ b/src/main/webapp/assets/css/member/member-seller-id-find-complete.css
@@ -7,7 +7,7 @@
 
 .logo-box {
   display: flex;
-  align-items: center; /* 수직 정렬 */
+  align-items: center;
   justify-content: center;
   width: 464px;
   padding-bottom: 40px;
@@ -52,7 +52,7 @@
   border-top: solid 1px #828282;
   border-bottom: solid 1px #828282 ;
   box-sizing: border-box; 
-  padding: 79px 0; /* 위아래에 20px, 좌우는 0 */
+  padding: 79px 0; 
   display: flex;
   flex-direction: column;
   align-items: center; 
