--- a/src/main/webapp/assets/css/member/member-seller-phone.css
+++ b/src/main/webapp/assets/css/member/member-seller-phone.css
@@ -55,15 +55,15 @@
 }
 
 .auth-button {
-  position: absolute; /* 절대 위치 */
-  right: 14px; /* 오른쪽으로 10px 떨어지게 */
-  top: 31px; /* 수직 중앙 정렬 */
-  transform: translateY(-50%); /* 수직 중앙 정렬을 위한 변환 */
+  position: absolute; 
+  right: 14px; 
+  top: 31px; 
+  transform: translateY(-50%); 
   background-color: #ffffff;
-  padding: 8px 15px; /* 버튼의 패딩 */
-  color: #C83F3F; /* 글자 색상 */
-  border: none; /* 테두리 없음 */
-  cursor: pointer; /* 커서 포인터 */
+  padding: 8px 15px; 
+  color: #C83F3F; 
+  border: none; 
+  cursor: pointer; 
   font-size: 14px;
   line-height: 22px;
   font-weight: bold;
@@ -71,7 +71,7 @@
 
 
 .auth-number-container {
-  margin-top: 10px; /* 간격 추가 */
+  margin-top: 10px; 
  }
 
 /* 회원가입 완료 버튼 */
