--- a/src/main/webapp/assets/css/myhome/myhome-delete-ok.css
+++ b/src/main/webapp/assets/css/myhome/myhome-delete-ok.css
@@ -1,335 +1,167 @@
 @charset "UTF-8";
-  @keyframes fade_up {
-        0% {
-            opacity: 0;
-            transform: translateY(10%);
-        }
 
-        to {
-            opacity: 1;
-            transform: translateY(0);
-        }
-    }
-
-    * {
-        box-sizing: border-box;
-    }
-
-    body {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-    }
-
-   
-    /* contents */
-
-    #unsubscribe-container {
-        display: block;
-        margin-top: 100px;
-        margin-bottom: 187px;
-    }
-
-    .unsubscribe-text {
-        font-weight: bold;
-    }
+@keyframes fade_up { 
+	0% {
+	opacity: 0;
+	transform: translateY(10%);
+}
 
 
-    #unsubscribe-box {
-        display: flex;
-        flex-direction: column;
-        border: solid 1px #828282;
-        border-radius: 20px;
-        margin: 0 auto;
-        width: 954px;
-        height: 212px;
-        justify-content: center;
-        padding-left: 30px;
-        margin-top: 10px;
-    }
+to {
+	opacity: 1;
+	transform: translateY(0);
+}
 
-    .back {
-        background-color: #113f8a;
-        color: #FFFFFF;
-        border-radius: 20px;
-        width: 90px;
-        height: 36px;
-        margin: 30px 0 0 380px;
-    }
+}
+* {
+	box-sizing: border-box;
+}
 
-    .confirm {
-        border: solid 1px #828282;
-        background-color: #FFFFFF;
-        border-radius: 20px;
-        width: 90px;
-        height: 36px;
-    }
+body {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+}
 
- /* 쿠폰 팝업*/
-    .popup-button img {
-      border: none;
-      cursor: pointer;
-    }
+/* contents */
+#unsubscribe-container {
+	display: block;
+	margin-top: 100px;
+	margin-bottom: 187px;
+}
 
+.unsubscribe-text {
+	font-weight: bold;
+}
 
-    /* The Modal (background) */
-    .modal {
-      display: none;
-      /* Hidden by default */
-      position: fixed;
-      z-index: 1;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      /* Black with opacity */
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+#unsubscribe-box {
+	display: flex;
+	flex-direction: column;
+	border: solid 1px #828282;
+	border-radius: 20px;
+	margin: 0 auto;
+	width: 954px;
+	height: 212px;
+	justify-content: center;
+	padding-left: 30px;
+	margin-top: 10px;
+}
 
-    /* Modal Content */
-    .modal-content {
-      justify-content: center;
-      flex-direction:column;
-      background-color: #fff;
-      border-radius: 10px;
-      width: 416px;
-      height: 656px;
-      text-align: center;
-      position: relative;
-      animation: fadeIn 0.3s ease-in-out;
-    }
-    
-    .modal-content img{
-    	padding: 60px 110px;
-    }
-    
-    .modal-content span:nth-child(1){
-    	align-items:center;
-    	padding: 10px 80px;
-    }
-    .modal-content span:nth-child(2){
-    	align-items:center;
-    	padding: 10px 80px;
-    }
-    
+.back {
+	background-color: #113f8a;
+	color: #FFFFFF;
+	border-radius: 20px;
+	width: 90px;
+	height: 36px;
+	margin: 30px 0 0 380px;
+}
+
+.confirm {
+	border: solid 1px #828282;
+	background-color: #FFFFFF;
+	border-radius: 20px;
+	width: 90px;
+	height: 36px;
+}
+
+/* 쿠폰 팝업*/
+.popup-button img {
+	border: none;
+	cursor: pointer;
+}
+
+/* The Modal (background) */
+.modal {
+	display: none;
+	/* Hidden by default */
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	/* Black with opacity */
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+/* Modal Content */
+.modal-content {
+	justify-content: center;
+	flex-direction: column;
+	background-color: #fff;
+	border-radius: 10px;
+	width: 416px;
+	height: 656px;
+	text-align: center;
+	position: relative;
+	animation: fadeIn 0.3s ease-in-out;
+}
+
+.modal-content img {
+	padding: 60px 110px;
+}
+
+.modal-content span:nth-child(1) {
+	align-items: center;
+	padding: 10px 80px;
+}
+
+.modal-content span:nth-child(2) {
+	align-items: center;
+	padding: 10px 80px;
+}
+
 /* 	.last-confirm button{
 		boder: none;
 		background-color: #ffc303;
 	} */
-	
-	.last-confirm1{
-		margin-top:20px;
-		border: none;
-		background-color: #ffc303;
-		border-radius: 20px;
-		width: 245px;
-		height: 58px;
-	}
-	.last-confirm2{
-		margin-top:10px;
-		border: solid 1px #828282;
-		background-color: #ffffff;
-		border-radius: 20px;
-		width: 245px;
-		height: 58px;
-	}
-	
+.last-confirm1 {
+	margin-top: 20px;
+	border: none;
+	background-color: #ffc303;
+	border-radius: 20px;
+	width: 245px;
+	height: 58px;
+}
 
-    .modal-content button::after {
-      border-radius: 20px;
-      background-color: #113f8a;
-      color: white;
-      border: none;
-    }
+.last-confirm2 {
+	margin-top: 10px;
+	border: solid 1px #828282;
+	background-color: #ffffff;
+	border-radius: 20px;
+	width: 245px;
+	height: 58px;
+}
 
-    /* Add animation for opening modal */
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: scale(0.9);
-      }
+.modal-content button::after {
+	border-radius: 20px;
+	background-color: #113f8a;
+	color: white;
+	border: none;
+}
 
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
-    }
+/* Add animation for opening modal */
+@keyframes fadeIn {from { opacity:0;
+	transform: scale(0.9);
+}
 
-    /* Close Button */
-    .close-button {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-      background-color: transparent;
-      border: none;
-      font-size: 18px;
-      cursor: pointer;
-    }
+to {
+	opacity: 1;
+	transform: scale(1);
+}
 
+}
 
-    /* footer */
-
-    footer {
-        width: 100%;
-        /* 부모 요소의 너비를 100%로 설정 */
-        padding: 20px;
-        /* 패딩 추가 */
-        background-color: #f9f9f9;
-        /* 배경색 */
-        margin-top: 150px;
-    }
-
-    .footer-black {
-        color: #000;
-    }
-
-    .footer-container {
-        display: flex;
-        justify-content: space-between;
-        width: 1200px;
-        margin: 0 auto;
-        padding: 150px 0 0 0;
-    }
-
-    .footer-section {
-        margin-bottom: 2px;
-        /* 각 섹션 간의 간격 */
-    }
-
-    .footer-section h3 {
-        font-size: 18px;
-        margin-bottom: 15px;
-    }
-
-    .footer-section p {
-        margin: 10px 0;
-        /* 기본 여백 제거 */
-        line-height: 1.2;
-        /* 줄 간격 조정 */
-        margin: 1px 0;
-        white-space: normal;
-        /* 줄바꿈 허용 */
-        font-size: 11px;
-    }
-
-    .footer-section ul {
-        list-style: none;
-        /* 리스트 점 제거 */
-        padding: 0;
-        /* 기본 패딩 제거 */
-        margin: 0;
-        /* 기본 마진 제거 */
-        line-height: 1.8;
-        /* 줄 간격 설정 (1.8은 글자 크기의 180% 간격) */
-    }
-
-    .footer-section ul li {
-        margin-bottom: 10px;
-        /* 리스트 항목 간격 */
-        font-size: 12px;
-    }
-
-    .footer-section ul li a {
-        text-decoration: none;
-        /* 링크 밑줄 제거 */
-        color: #000000;
-        /* 텍스트 색상 */
-        font-size: 12px;
-    }
-
-    .contact-info {
-        display: flex;
-        /* Flexbox로 가로 정렬 */
-        align-items: center;
-        /* 수직 중앙 정렬 */
-    }
-
-    .highlight {
-        color: #000000;
-        /* 강조 색상 */
-        font-weight: bold;
-        /* 글자 두껍게 */
-        font-size: 12px;
-        /* 글자 크기 */
-    }
-
-    .custom-list {
-        list-style-type: none;
-        /* 기본 리스트 스타일 제거 */
-    }
-
-    .custom-list li::before {
-        content: '•';
-        /* 리스트 앞에 점 추가 */
-        color: #000;
-        /* 점의 색상 */
-        font-weight: bold;
-        /* 점 굵게 */
-        display: inline-block;
-        /* 점을 인라인으로 표시 */
-        width: 13px;
-        /* 점과 텍스트 사이의 간격 조정 */
-    }
-
-    .button-container {
-        display: flex;
-        /* 버튼을 가로로 정렬 */
-        gap: 10px;
-        /* 버튼 사이 간격 */
-        align-items: center;
-        /* 버튼을 텍스트와 수직으로 정렬 *
-    margin-top: 10px; /* 버튼 위쪽 마진 */
-    }
-
-    .kakao-button,
-    .email-button {
-        background-color: #FFFFFF;
-        color: #000000;
-        border: solid #E6E6E6;
-        margin: 3px;
-        margin-bottom: 10px;
-        border-radius: 20px;
-        cursor: pointer;
-        padding: 5px 15px;
-        /* 버튼 내부 여백 */
-        font-size: 11px;
-    }
-
-    .kakao-button {
-        width: 211px;
-        height: 29px;
-    }
-
-    .email-button {
-        width: 93px;
-        height: 29px;
-    }
-
-    .footer-section {
-        width: 100%;
-        /* 부모 요소의 너비를 100%로 설정 */
-        padding: 10px;
-        /* 패딩 추가 */
-        background-color: #f9f9f9;
-        /* 배경색 */
-        font-family: Arial, sans-serif;
-        /* 폰트 스타일 */
-    }
-
-    .footer-section.legal p {
-        margin: 0;
-        /* 기본 여백 제거 */
-        white-space: nowrap;
-        /* 줄바꿈을 방지합니다. */
-        overflow: visible;
-        /* 텍스트가 부모 요소의 경계를 넘어가도 보이게 합니다. */
-    }
-
-    .legal p {
-        font-size: 12px;
-        color: #767676;
-        line-height: 1.5;
-    }
+/* Close Button */
+.close-button {
+	position: absolute;
+	top: 10px;
+	right: 15px;
+	background-color: transparent;
+	border: none;
+	font-size: 18px;
+	cursor: pointer;
+}
