--- a/src/main/webapp/assets/css/community/community-add-post.css
+++ b/src/main/webapp/assets/css/community/community-add-post.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /*
 *  html5resetcss
 */
@@ -18,401 +17,214 @@ hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padd
 input,select{vertical-align:middle}
 
 .addPost-wrapper {
-  width: 1920px;
-  height: 1189px;
+  align-items: center;
+  justify-content: center;
   display: flex;
   flex-direction: column;
+}
+
+
+/* 이미지 전체 래퍼 */
+
+.image-wrapper {
+
+}
+
+/* 더미데이터 */
+.main-img-dummy {
+  display: block;
+  width: 440px;
+  height: 440px;
+  border-radius: 20px;
+  /* border: solid 1px #333; */
+  background-color: #d9d9d9;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.main-img-dummy p {
+  width: 440px;
+  height: 440px;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
   align-items: center;
-  /* justify-content: center; */
+  justify-content: center;
   margin: 0 auto;
 }
 
-.addpic-wrapper {
-  width: 1122px;
-  height: 521px;
-  /* border: solid 4px black; */
+.sub-images-wrap-dummy{
   display: flex;
-  flex-direction: row;
+  width: 440px;
+  height: 100px;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.sub-img-dummy {
+  display: block;
+  width: 100px;
+  height: 100px;
+  border-radius: 20px;
+  /* border: solid 1px #333; */
+  background-color: #d9d9d9;
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
+
+#dummy-content-wrap {
+
+
+}
+
+
+/* 실제 이미지 */
+#main-content-wrap{
+  display: none;
+  /* border: solid 4px red; */
+  position: absolute;
+  top: -10px;
+}
+
+
+.main-image{
+  position: relative;
+  /* 태그 추가 버튼 포지션 */
+  width: 440px; 
+  height: 450px;
+}
+
+
+.close-button {
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+  filter: invert();
+}
+
+.main-img {
+  display: block;
+  width: 440px;
+  height: 440px;
+  border: solid 1px #333;
+  margin-top: 10px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 20px;
+}
+
+.sub-images-wrap{
+  display: flex;
+  justify-content: space-between;
+}
+
+.sub-img {
+  display: block;
+  width: 100px;
+  height: 100px;
+  /* border: solid 1px #333; */
+  background-color: #D9D9D9;
+  border-radius: 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#file-upload {
+  display: none;
+}
+
+.tag-button {
+  position: absolute;
+  bottom : 15%;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.tag-popup{
+  display: none;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  background-color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* 글 작성하는 칸 */
+
+.writer-box {
+  width: 440px;
+  height: 500px;
+  border-radius: 20px;
+  border: solid 1px #828282;
+  margin-top: 47px;
+}
+
+/* 전체 업로드 래퍼! */
+
+.post-wrapper {
+  width: 900px;
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto;
-  margin-bottom: 91px;
-}
-
-.button-first {
-  margin-left: 1046px;
-}
-
-
-.addpic-smallthumbnail img{
-  width: 150px;
-  height: 150px;
-  border-radius: 20px;
-  
-}
-
-.addpic-plus-button {
-  background-color: #D9D9D9;
-  width: 150px;
-  height: 150px;
-  border-radius: 20px;
-  position: relative;
-  width: 150px;
-  height: 150px;
-  border-radius: 20px;
-}
-
-.button-chosen {
   position: absolute;
-  bottom: 29px;
-  right: 171px;
+  top: 20px;
 }
 
-.choose-tag-button {
-  width: 128px;
-  height: 30px;
-  background-color: #113F8A;
-  border-radius: 20px;
-  color: #FFFFFF;
-  font-size: 14px;
-  line-height: 22px;
-  letter-spacing: -3%;
-  padding: 4px 15px 4px 15px;
-  cursor: pointer;
-  margin: 405px 166px;
-  position: relative;
-  
-}
+/* 포스트 박스 내부 창 */
 
-.choose-tag-button a{
-  color: #FFFFFF;
-  font-size: 14px;
-  line-height: 22px;
-  letter-spacing: -3%;
-  cursor: pointer;
-}
-
-.explain-wrapper {
+textarea {
+  margin-top: 20px;
+  margin-left: 20px;
+  width: 400px;
+  height: 460px;
   border: none;
-  background: none;
-  outline: none;
-  float: left;
-  width: 464px;
-  height: 464px;
-  position: relative;
-}
-
-#explain {
-  width: 392px;
-  height: 392px;
-  background-color: none;
-  border: none;
-  position: absolute;
-  left: 38px;
-  top: 37px;
-  font-size: 14px;
-  line-height: 22px;
-  letter-spacing: -3%;
-  outline: none;
   resize: none;
+  background-color: transparent;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: -3%;
+  color: #818181;
 }
 
-.tag-popup {
-  width: 200px;
-  height: 50px;
-  border-radius: 20px;
-  background-color: #FFE072;
+textarea:focus {
+  outline: none;
+}
+
+.upload-wrapper {
+  width: 900px;
+  height: 570px;
   display: flex;
-  justify-content: center;
-  position: absolute;
-  top: 50%;
-  right: 30%;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content:space-between;  
+  position: relative;
+  margin-top: 100px;
+  /* border: solid 4px red; */
 }
 
-.disable{
+.upload {
+ position: absolute;
+ right: 0px;
+ top: 0px;
+ width: 68px;
+ height: 30px;
+ border-radius: 20px;
+ color: #FFFFFF;
+ background-color: #113F8A;
+ cursor: pointer;
+}
+
+.disable {
   display: none;
 }
 
 .enable {
   display: flex;
-}
-
-
-
-.photoFrame{
-  width: 500px;
-  height: 500px;
-}
-.photoFrame:hover{
-  cursor: pointer;
-}
-
-
-.tag-popup .h5{
-  color: #FFFFFF;
-  font-weight: bold;
-  width: 200px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-}
-
-
-
-.explain-box {
-  width: 464px;
-  height: 464px;
-  background: #FFFFFF;
-  box-sizing: border-box;
-  border: solid 1px #828282;
-  border-radius: 20px;
-}
-
-#plus-img {
-  position: absolute;
-  right: 42%;
-  bottom: 43%;
-}
-
-
-#file1 {
-  width: 150px;
-  height: 150px;
-  opacity: 0;
-}
-
-.addpic-pc{
-  width: 464px;
-  height: 464px;
-  background-color: #D9D9D9;
-  border-radius: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-}
-
-button.addpic-pc {
-  font-size: 14px;
-  line-height: 22px;
-  letter-spacing: -3%;
-  position: absolute;
-  bottom: 29px;
-}
-
-
-
-
-
-.section {
-  height: 27px;
-}
-
-.addpic {
-  width: 150px;
-  height: 322px;
-  display: flex;
-  flex-wrap: wrap
-}
-
-
-
-/* 상품 누르면 검색창 나타남 */
-
-#search {
-  width: 340px;
-  height: 54px;
-  border: solid 1px #828282;
-  border-radius: 20px;
-  box-sizing: border-box;
-  color: #828282;
-  padding: 19px 0px 19px 26px;
-  font-size: 11px;
-  letter-spacing: -3%;
-  line-height: 16px;
-}
-
-input:focus {
-  outline: none;
-}
-
-button.no{
-  background-color: transparent;
-  color: #131313;
-  font-size: 12px;
-  letter-spacing: -3%;
-  line-height: 18px;
-  font-weight: bold;
-}
-
-.tag-search-box {
-  width: 374px;
-  height: 54px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-  margin-top: 12px;
-}
-
-.tag-popup-plus {
-  /* display: none; */
-}
-
-
-.tag-popup-select {
-  width: 406px;
-  height: 274px;
-  border: solid 1px #828282;
-  border-radius: 20px;
-  background-color: #FFFFFF;
-  box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.2);
-  position: absolute;
-  left: 40%;
-  top: 40px;
-  z-index: 100;
-  /* display: none; */
-}
-
-.addpic-pc-relative {
-  width: 464px;
-  height: 464px;
-  position: relative;
-}
-
-
-.plus-product {
-  font-size: 12px;
-  line-height: 18px;
-  letter-spacing: -3%;
-  color: #FFC303;
-  font-weight: bold;
-  margin-top: 12px;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 10px;
-}
-
-.product1 {
-  width: 374px;
-  height: 70px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.image-area {
-  width: 70px;
-  height: 70px;
-  border-radius: 20px;
-  background-color: #D9D9D9;
-}
-.button-tag-popup {
-  width: 464px;
-  height: 464px;
-  position: absolute;
-}
-
-
-
-.product-button-wrapper button {
-  border-radius: 20px;
-  box-sizing: border-box;
-  display: flex;
-  border: solid 1px #828282;
-  background-color: transparent;
-  font-size: 12px;
-  font-weight: bold;
-  color: #131313;
-  letter-spacing: -3%;
-  line-height: 18px;
-  padding: 5px 23px 5px 23px;
-}
-
-.product1-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 12px;
-}
-
-.product2-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 12px;
-}
-
-.product2 {
-  width: 374px;
-  height: 70px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.explain {
-  width: 67px;
-  height: 70px;
-  margin-right: 140px;
-  padding-top: 3px;
-
-}
-
-.explain-title{
-  width: 30px;
-  height: 16px;
-  font-size: 11px;
-  font-weight: bold;
-  line-height: 16px;
-  letter-spacing: -3%;
-  color: #828282;
-}
-
-.explain-info {
-  width: 166px;
-  height: 16px;
-  font-size: 10px;
-  line-height: 16px;
-  letter-spacing: -3%;
-  color: #131313;
-}
-
-.addpic-pc-explain {
-  height: 464px;
-  width: 464px;
-  box-sizing: border-box;
-  border: solid 1px #828282;
-  border-radius: 20px;
-  position: relative;
-}
-
-.explain-p {
-  position: absolute;
-  top: 37px;
-  left: 38px;
-}
-
-.explain-p .h6{
-  color: #828282;
-}
-
-.yellow-button {
-  width: 30px;
-  height: 30px;
-  position: absolute;
-  left: 140px;
-  top: 20px;
-  display: none;
-}
-
-.yellow-button button {
-  background-color: transparent;
 }
