--- a/src/main/webapp/assets/css/community/community-add-post.css
+++ b/src/main/webapp/assets/css/community/community-add-post.css
@@ -42,6 +42,10 @@ input,select{vertical-align:middle}
   background-size: cover;
   margin-bottom: 10px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .main-img-dummy p {
@@ -84,9 +88,6 @@ input,select{vertical-align:middle}
 /* 실제 이미지 */
 #main-content-wrap{
   display: none;
-  /* border: solid 4px red; */
-  position: absolute;
-  top: -10px;
 }
 
 
@@ -111,7 +112,6 @@ input,select{vertical-align:middle}
   width: 440px;
   height: 440px;
   border: solid 1px #333;
-  margin-top: 10px;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 20px;
@@ -141,20 +141,101 @@ input,select{vertical-align:middle}
   position: absolute;
   bottom : 15%;
   left: 50%;
+  color : white;
   transform: translate(-50%, 0);
 }
 
 .tag-popup{
-  display: none;
-  width: 200px;
-  height: 200px;
-  position: absolute;
-  background-color: white;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+	display: none;
+	width: 400px;
+	height: 280px;
+	position: absolute;
+	background-color: white;
+	top: 50%;
+	left: 50%;
+	padding : 16px;
+	border-radius : 20px;
+	border: solid 1px #828282;
+	z-index:1000;
 }
 
+.tag-popup .tag-product{
+	display : flex; 
+	flex-direction : column;
+	justify-content: center;
+	align-items: center;
+}
+
+.tag-popup .search-wrap{
+	display:flex;
+	justify-content: space-between;
+	align-items: center;
+	margin : 0 0 12px 0;
+}
+
+.tag-popup .tag-product > p{
+	font-size: 12px;
+	color: #FFC303;
+}
+.tag-popup .search-wrap > p {
+	white-space: nowrap;
+	font-size:12px;
+	margin: 0 0 0 12px;
+}
+ 
+
+.tag-popup .taged-products{
+	width : 100%;
+	height: 160px;
+    overflow: auto;
+}
+
+
+.tag-popup .taged-products > div {
+	margin : 0 0 6px 0;
+}
+.tag-popup .taged-product-wrap{
+	display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
+
+.tag-popup .taged-product-title{
+	flex : 1;
+}
+
+.tag-popup .taged-product{
+    display: flex;
+}
+
+.tag-popup .taged-product-image{
+	width : 70px;
+	height : 70px;
+	border-radius : 20px;
+	overflow : hidden;
+	background-color : #ddd;
+	margin :  0 12px 0 0;
+}
+
+.tag-popup .taged-product-image img{
+	width : 100%;
+}
+
+.tag-popup .taged-product-button {
+	width : 68px;
+	height : 28px;
+	border-radius : 20px;
+	border: solid 1px #828282;
+}
+
+.tag-popup .search{
+	width : 340px;
+	height : 54px;
+	border-radius: 20px;
+  	border: solid 1px #828282;
+  	padding : 16px;
+}
 /* 글 작성하는 칸 */
 
 .writer-box {
@@ -162,7 +243,6 @@ input,select{vertical-align:middle}
   height: 500px;
   border-radius: 20px;
   border: solid 1px #828282;
-  margin-top: 47px;
 }
 
 /* 전체 업로드 래퍼! */
@@ -173,8 +253,6 @@ input,select{vertical-align:middle}
   flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto;
-  position: absolute;
-  top: 20px;
 }
 
 /* 포스트 박스 내부 창 */
@@ -205,20 +283,18 @@ textarea:focus {
   flex-direction: row;
   justify-content:space-between;  
   position: relative;
-  margin-top: 100px;
-  /* border: solid 4px red; */
+  margin: 100px 0;
 }
 
 .upload {
- position: absolute;
- right: 0px;
- top: 0px;
- width: 68px;
- height: 30px;
- border-radius: 20px;
- color: #FFFFFF;
- background-color: #113F8A;
- cursor: pointer;
+	display: block;
+	width: 68px;
+	height: 30px;
+	border-radius: 20px;
+	color: #FFFFFF;
+	background-color: #113F8A;
+	cursor: pointer;
+	margin: 0 0 20px auto;
 }
 
 .disable {
