--- a/src/main/webapp/assets/css/myhome/myhome-update.css
+++ b/src/main/webapp/assets/css/myhome/myhome-update.css
@@ -266,6 +266,12 @@ to {
 	margin-top: 26px;
 }
 
+.edit-category0 {
+	font-size: 16px;
+	line-height: 24px;
+	font-weight: bold;
+	padding-right: 100px;
+}
 .edit-category1 {
 	font-size: 16px;
 	line-height: 24px;
