--- a/src/main/webapp/assets/css/product/health-main.css
+++ b/src/main/webapp/assets/css/product/health-main.css
@@ -50,7 +50,7 @@
 }
 
 #content-frame{
-  width: 920px;
+  width: 1440px;
   margin: 0 auto;
 }
  .all-and-header{
@@ -106,7 +106,7 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-  width: 920px; /* 슬라이더 너비 */
+  width: 1440px; /* 슬라이더 너비 */
   margin: 20px auto;
 }
 .slider-container-cat {
@@ -114,7 +114,7 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-  width: 920px; /* 슬라이더 너비 */
+  width: 1440px; /* 슬라이더 너비 */
   margin: 20px auto;
 }
 .slider-container-bird {
@@ -122,7 +122,7 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-  width: 920px; /* 슬라이더 너비 */
+  width: 1440px; /* 슬라이더 너비 */
   margin: 20px auto;
 }
 .slider-container-fish {
@@ -130,7 +130,7 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-  width: 920px; /* 슬라이더 너비 */
+  width: 1440px; /* 슬라이더 너비 */
   margin: 20px auto;
 }
 
@@ -178,8 +178,8 @@
   border-radius: 20px;
   display: flex;
   justify-content: center; /* 이미지 중앙 정렬 */
-  width: 220px;
-  height: 220px;
+  width: 329px;
+  height: 411px;
 }
 
 .product-image-wrap .hover-box {
@@ -223,6 +223,33 @@
   margin-bottom: 13px;
   border-radius: 20px;
 }
+
+.product-image-wrap .main-image{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.product-image-wrap .sub-image{
+	display:none; 
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
+product-image-wrap:hover .main-image {
+    display: none;
+}
+
+.product-image-wrap:hover .sub-image {
+    display: block;
+}
+
+
+
+
 
 .product-image-wrap a {
   width: 220px;
