메인최종수정완료

--- a/src/main/webapp/assets/css/main/main-index.css
+++ b/src/main/webapp/assets/css/main/main-index.css
@@ -887,8 +887,7 @@ footer {
 .donation-wrap{
   display: flex;
   justify-content: space-between;
-  margin-top: 250px;
-  margin-bottom:100px;
+  margin:150px 0;
 }
 
 .donation{
