--- a/src/main/webapp/assets/css/admin/admin-list.css
+++ b/src/main/webapp/assets/css/admin/admin-list.css
@@ -226,6 +226,14 @@ h1 {
 	margin: 0 auto;
 }
 
+.two-line {
+	 display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 table {
 	width: 1440px;
 	text-align: center;
