메인 메뉴바 수정

--- a/src/main/webapp/assets/css/main/final-main-test.css
+++ b/src/main/webapp/assets/css/main/final-main-test.css
@@ -309,26 +309,20 @@ body {
    gap: 26px;
 }
 
-#header-wrap #nav .right .icons img {
-   display: flex;
-   width: 30px;
-   height: 30px;
-}
-
 #header-wrap #nav .right .login {
    display: flex;
-   font-size: 16px;
 }
 
 #header-wrap #nav .right .login a {
-   display: flex;
-   width: 100%;
-   height: 100%;
-   text-align: center;
-   justify-content: center;
-   text-decoration-line: none;
-   color: black;
-   padding-right: 34px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    justify-content: center;
+    text-decoration-line: none;
+    color: black;
+    padding-right: 26px;
+    font-size: 14px;
    
 }
 
@@ -348,10 +342,7 @@ body {
 }
 
 .menu-wrap {
-   display: flex;
-   height: 61px;
    font-weight: bold;
-   border-top: solid #818181 1px;
 }
 
 .menu-wrap .menu {
@@ -379,14 +370,18 @@ body {
 }
 
 .sub-menu-wrap ul {
-   overflow: hidden;
-   height: 0;
+	overflow: hidden;
+	height: 0; 
 }
 
+.sub-menu-wrap ul a{
+	font-size : 14px;
+	font-weight : semi-bold;
+}
 .sub-menu-wrap .sub-menu {
    width: 150px;
    display: flex;
-   align-items: center;
+   align-items: center; 
    text-align: center;
    padding : 12px 0;
    position: relative;
